# OpenDb_standalone

./: CMakeLists.txt
include/odb/: ISdb.h  IZdcr.h  ZComponents.h  ZException.h  ZFactory.h  ZInterface.h  ZObject.h  array1.h  array2d.h  box.h  cdl.h  darr.h  db.h  dbBlockCallBackObj.h  dbBlockSet.h  dbCCSegSet.h  dbDiff.h  dbExtControl.h  dbId.h  dbIterator.h  dbMap.h  dbMatrix.h  dbNetSet.h  dbObject.h  dbRtEdge.h  dbRtNode.h  dbRtTree.h  dbSearch.h  dbSet.h  dbShape.h  dbStream.h  dbTransform.h  dbTypes.h  dbUtil.h  dbViaParams.h  dbWireCodec.h  dbWireGraph.h  defin.h  defout.h  geom.h  (+14 more)
include/utl/: Logger.h
src/OpenDb.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/db/: dbInst.h
src/swig/python/: CMakeLists.txt
